--- a/style.css
+++ b/style.css
@@ -118,6 +118,10 @@ canvas {
   background-color: #4caf50;
 }
 
+#downloadButton:disabled {
+  background-color: #a5d6a7;
+}
+
 #downloadButton:not(:disabled):hover {
   background-color: #45a049;
 }
